--- a/views/index.html
+++ b/views/index.html
@@ -10,11 +10,104 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <!-- Berkshire Swash -->
     <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
-    
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <!-- NORMALIZE Y ESTILOS -->
+    <link rel="stylesheet" href="/stylesheets/normalize.css">
+    <link rel="stylesheet" href="/stylesheets/styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Home</h1>
-</body>
-</html>
+
+    <!-- HEADER -->
+
+    <!-- CARROUSEL -->
+
+    <main>
+    <!-- AUTORES DESTACADOS -->
+      <!-- ENCABEZADO -->
+    <div class="headline">
+    <img class="varita"src="/images/Recursos/varita.png" alt=" imágen de varita mágica">
+    </div>
+    <h1>Autores destacados</h1>
+    <section class="authors">
+      <!-- TOLKIEN -->
+      <article class="card">
+        <div class="card-content">
+          <img class="writer" src="/images/Autores/tolkien.png" alt="Imagen de J. R. R. Tolkien">
+          <div class="card-text">
+          <img class="bio" src="/images/Recursos/gondortree.png" alt="árbol blanco">
+          <p class="bio-text">Escritor, poeta, filólogo, lingüista y profesor universitario británico, conocido principalmente por ser el autor de las novelas clásicas de fantasía heroica El hobbit, El Silmarillion y El Señor de los Anillos. </p>
+        </div>
+        </div>
+      </article>
+      <!-- ANDRZEJ SAPKOWSKI -->
+      <article class="card">
+        <div class="card-content">
+          <img class="writer" src="/images/Autores/sapkowsky.png" alt="Imágen de Andrzej Sapkowski">
+          <div class="card-text">
+          <img class="bio" src="/images/Recursos/thewitcher.png" alt="Logo the witcher">
+          <p class="bio-text">Escritor polaco de fantasía heroica. Sus obras están fuertemente influenciadas por la cultura y mitología eslavas, así como por las narraciones tradicionales. Su estilo de escritura es fluido y directo adaptando el lenguaje popular de la Polonia actual. Entre sus obras más populares se encuentra la saga del brujo Geralt de Rivia, compuesta por siete volúmenes.</p>
+          </div>
+        </div>
+      </article>
+      <!-- GEORGE R. R. MARTIN -->
+      <article class="card">
+        <div class="card-content">
+          <img class="writer" src="/images/Autores/martin.png" alt="Imagen de George R. R. Martin">
+          <div class="card-text"></div>
+          <img class="bio" src="/images/Recursos/targaryen.png" alt="Logo Casa Targaryen">
+          <p class="bio-text">Guionista y escritor estadounidense de literatura fantástica, ciencia ficción y terror. Es conocido por ser el autor de la serie de novelas Canción de hielo y fuego, adaptadas para la televisión con el título de Juego de tronos (Game of Thrones). </p>
+          </div>
+        </div>
+      </article>  
+    </section>
+
+    <!-- SELECCIÓN DEL MES -->
+    <div class="headline">
+      <img class="varita"src="/images/Recursos/varita.png" alt=" imágen de varita mágica">
+      </div>
+      <h1>Seleccionados del mes</h1>
+    <section class="month-selection">
+      <!-- LIBRO 1 -->
+      <article class="book">
+        <div class="book-content">
+          <img class="book-cover" src="/images/Libros/el temor de un hombre sabio.jpg" alt="Portada de 'El temor de un hombre sabio'">
+          <h5>El Temor de un Hombre Sabio</h5>
+          <h6>Patrick Rothfus</h6>
+          <!-- Botón de comprar -->
+          <input type="button" value="Comprar">
+        </div>
+      </article>
+      <!-- LIBRO 2 -->
+      <article class="book">
+        <div class="book-content">
+          <img class="book-cover" src="/images/Libros/la morada - el exilio - el refugio.jpg" alt="Portada de 'La Morada - El exilio - El Refugio'">
+          <h5>La Morada - El Exilio - El Refugio</h5>
+          <h6>R. A. Salvatore</h6>
+          <!-- Botón de comprar -->
+          <input type="button" value="Comprar">
+          
+        </div>
+      </article>
+      <!-- LIBRO 3 -->
+      <article class="book">
+        <div class="book-content">
+          <img class="book-cover" src="/images/Libros/corona de espadas.jpg" alt="Portada de 'Corona de Espadas'">
+          <h5>Corona de Espadas</h5>
+          <h6>Robert Jordan</h6>
+          <!-- Botón de comprar -->
+          <input type="button" value="Comprar">
+          
+        </div>
+      </article>
+    </section>
+     <!-- MÁS TÍTULOS -->
+     <section class="titles">
+       <img src="/images/Recursos/varita.png" alt="varita mágica">
+       <a href="ACÁ VA EL LINK A UNA VISTA CON UN LISTADO DE TÍTULOS"><h3>Más títulos</h3></a>
+     </section>
+    </main>
+    <!-- FOOTER -->
+        
+
+       
+  </body>
