--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,3 +1,69 @@
 body {
-    background-color: black;
+    background-color: var(--color-beige);
+}
+
+/* AUTORES */
+main{
+    margin: 0 auto;
+    width: 90%;
+}
+
+/* TITULO */
+.headline {
+    display: inline-block;
+    margin-right: 0px 10px
+    
+}
+.headline .varita {
+    margin-top: 20px;
+    width: 30px;
+    height: 30px;
+}
+
+h1 {
+    display: inline-block;
+    font-size: 35px;
+    font-family: var(--font-berkshire);
+    text-align: center;
+}
+
+/* CARDS */
+.card {
+    background-color: var(--color-beige);
+    margin-bottom: 10px;
+  }
+
+.card .card-content .writer {
+    width: 100px;
+    height: 100px;
+    border: 5px solid rgba(193,161,211, 0.8);
+    border-radius: 50%;
+    box-shadow: 2px 2px 2px 1px rgba(193,161,211, 0.6);
+    
+    
+}
+
+.card .card-content .bio {
+    width: 100%;
+    height: 20%
+}
+
+.card .card-content .card-text {
+    position: relative;
+    display: block;
+    text-align: center;
+}
+
+.card .card-content .card-text .bio-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+/* SELECCION DEL MES */
+.month-selection .book .book-content .book-cover {
+    width: 100px;
+    height: 200px;
 }
