corrigiendo tolkien card

--- a/views/index.html
+++ b/views/index.html
@@ -53,7 +53,7 @@
       <article class="card">
         <div class="card-content">
           <img class="writer" src="/images/Autores/martin.png" alt="Imagen de George R. R. Martin">
-          <div class="card-text"></div>
+          <div class="card-text">
           <img class="bio" src="/images/Recursos/targaryen.png" alt="Logo Casa Targaryen">
           <p class="bio-text">Guionista y escritor estadounidense de literatura fantástica, ciencia ficción y terror. Es conocido por ser el autor de la serie de novelas Canción de hielo y fuego, adaptadas para la televisión con el título de Juego de tronos (Game of Thrones). </p>
           </div>
