--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -21,6 +21,7 @@ main{
 }
 
 h1 {
+    margin: auto auto 15px auto;
     display: inline-block;
     font-size: 35px;
     font-family: var(--font-berkshire);
@@ -34,23 +35,30 @@ h1 {
   }
 
 .card .card-content .writer {
-    width: 100px;
-    height: 100px;
     border: 5px solid rgba(193,161,211, 0.8);
     border-radius: 50%;
     box-shadow: 2px 2px 2px 1px rgba(193,161,211, 0.6);
-    
-    
+    display: block;
+    height: 100px;
+    margin: auto;
+    width: 100px;
+   
 }
 
-.card .card-content .bio {
-    width: 100%;
-    height: 20%
+.card .card-content .card-text{
+    margin-bottom: 50px;
+}
+
+.card .card-content .card-text .bio {
+    width: 55%;
+    height: 15%;
+    opacity: 0.1;
 }
 
 .card .card-content .card-text {
-    position: relative;
+    font-family: var(--font-roboto);
     display: block;
+    position: relative;
     text-align: center;
 }
 
