--- a/public/stylesheets/shoppingCart.css
+++ b/public/stylesheets/shoppingCart.css
@@ -1,3 +1,123 @@
+@import url(variables.css);
+
+*{
+    margin: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    color: var(--color-azulOscuro);
+}
+
 body {
-    background-color: yellowgreen;
+    background-color: var(--color-beige);
+    color: var(--color-azulOscuro);
+    font-family: var(--font-roboto);
+    padding: 20px;
+    max-width: 560px;
+    margin: 0 auto;
+    width: 100%;
+}
+.buy-image {
+    border-radius: 15px;
+    height: 150px;
+    margin-bottom: 5px;
+    box-shadow:var(--box-shadow-images);
+}
+
+.title {
+    font-family: var(--font-berkshire);
+    margin-bottom: 25px;
+}
+
+.quantity-button {
+    background-color: var(--color-Violeta);
+    border-radius: 7px;
+    width: 35px;
+    height: 20px;
+    box-shadow: var(--box-shadow-button);
+
+}
+
+.conteiner-item {
+    display: flex;
+    justify-content: space-evenly;
+    font-size: var(--paragraph);
+}
+
+.item-left{
+    text-align: center;
+}
+.item-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 50%;
+    
+}
+.right{
+   text-align: right;
+   margin-bottom: 25px;
+   font-size: 15px;
+}
+
+/* Comienza la sección Detalle de la Compra */
+
+.conteiner-price{
+    display: flex;
+    justify-content: space-between;
+    height: auto;
+    max-width: 280px;
+    margin: 15px auto;
+    padding: 5px;
+}
+.total {
+    background: linear-gradient(to top, var(--color-beige),  rgba(255, 255, 255, 1) );
+    justify-content: space-evenly;
+    max-width: 230px;
+}
+.detail-title {
+    background-color: var(--color-Violeta);
+    border-radius: 30px;
+    font-size: 15px;
+    margin: 30px auto;
+    padding: 5px 0;
+    text-align: center;
+    width: 280px;
+}
+.to-pay{
+    display: block;
+    background-color: var(--color-Violeta);
+    border: none;
+    box-shadow:var(--box-shadow-button);
+    color: var(--color-azulOscuro);
+    height: 25px;
+    margin: 25px auto;
+    text-align: center;
+    width: 180px;
+}
+/* Comienza la sección Recomendados para Vos */
+
+.recommended-title {
+    font-family: var(--font-berkshire);
+    font-size: var(--prices);
+    margin: 50px auto 20px;
+}
+
+.recommended-conteiner {
+    display: flex;
+    justify-content: space-evenly;
+    flex-flow:row wrap ;
+}
+
+.recommended-item {
+    text-align: center;
+    font-size: var(--paragraph);
+    margin: 20px;
+    width: 35%;
+   height: 230px;
+}
+.recommended-img {
+    margin-bottom: 10px;
+    box-shadow: var(--box-shadow-images);
+    border-radius: 15px;
+    height: 120px;
 }
