--- a/views/index.html
+++ b/views/index.html
@@ -10,15 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <!-- Berkshire Swash -->
     <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <!-- NORMALIZE Y ESTILOS -->
     <link rel="stylesheet" href="/stylesheets/normalize.css">
     <link rel="stylesheet" href="/stylesheets/styles.css">
     <title>Document</title>
 </head>
 <body>
-
-    <!-- HEADER -->
-
     <!-- CARROUSEL -->
 
     <main>
@@ -26,8 +25,9 @@
       <!-- ENCABEZADO -->
     <div class="headline">
     <img class="varita"src="/images/Recursos/varita.png" alt=" imágen de varita mágica">
-    </div>
     <h1>Autores destacados</h1>
+    </div>
+    
     <section class="authors">
       <!-- TOLKIEN -->
       <article class="card">
