--- a/views/index.html
+++ b/views/index.html
@@ -1,20 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
     <!-- GOOGLE FONT -->
     <!-- Roboto -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <!-- Berkshire Swash -->
-    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
-    
-    <link rel="stylesheet" href="/stylesheets/style.css">
-    <title>Document</title>
-</head>
-<body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap"
+      rel="stylesheet"
+    />
+    <!-- fon icons -->
+    <script
+      src="https://kit.fontawesome.com/fc00004fb4.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- CSS -->
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="logo">
+        <h1 class="logo__title"><a href="" class="logo__link">SpellBook</a></h1>
+      </div>
+      <div class="btn">
+        <i class="fas fa-bars" id="icon"></i>
+      </div>
+      <nav class="nav">
+        <ul class="menu">
+          <li class="menu__items"><a href="#" class="menu__link">Inicio</a></li>
+          <li class="menu__items"><a href="#" class="menu__link">Libros</a></li>
+          <li class="menu__items">
+            <a href="#" class="menu__link">Recomendados</a>
+          </li>
+          <li class="menu__items">
+            <a href="#" class="menu__link">Novedades</a>
+          </li>
+          <li class="menu__items">
+            <a href="#" class="menu__link">Nosotros</a>
+          </li>
+        </ul>
+        <div class="login">
+          <a class="login__btn">Registrate</a>
+          <a class="login__btn login--up">Iniciar sesion</a>
+        </div>
+      </nav>
+    </header>
     <h1>Home</h1>
-</body>
+    <script src="js/header.js"></script>
+  </body>
 </html>
