--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -11,7 +11,7 @@ main{
 /* TITULO */
 .headline {
     display: flex;
-    justify-content:space-around;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     font-size: 1rem;
@@ -20,12 +20,12 @@ main{
     
 }
 .headline .varita {
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
 }
 
 h1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-family: var(--font-berkshire);
 }
 
@@ -38,8 +38,6 @@ h1 {
 .card .card-content .writer {
     border: 5px solid rgba(193,161,211, 0.8);
     border-radius: 50%;
-     /* box-shadow: 2px 2px 2px 1px rgba(193,161,211, 0.6);  */
-     /* Sombreado */
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
     display: block;
     height: 100px;
@@ -66,6 +64,7 @@ h1 {
 }
 
 .card .card-content .card-text .bio-text {
+    font-size: 0.9rem;
     position: absolute;
     top: 50%;
     left: 50%;
