--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,4 +1,5 @@
 @import url('variables.css');
+@import url('header.css');
 @import url('home.css');
 @import url('login.css');
 @import url('productDetail.css');
