--- a/views/index.html
+++ b/views/index.html
@@ -18,6 +18,21 @@
     <title>Document</title>
 </head>
 <body>
+  <!-- HEADER -->
+  <header class="main-header">
+    <div class="logo">
+      <img src="/images/Diseño y Logo/Logo rectangular/Letras Claras/Claro-Rectangular-400px.png" alt="">
+    </div> 
+    <div class ="burger-icon">
+    <i class="fas fa-bars"></i>
+  </div>
+      <div class="user-icons">
+        <i class="fas fa-search"></i>
+          <i class="fas fa-shopping-cart"></i>
+      </div>  
+
+</header>
+
     <!-- CARROUSEL -->
 
     <main>
