--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -1,41 +1,75 @@
-.main-header {
+.header {
+    position: relative;
+    width: 100%;
+    min-width: 320px;
+    height: 10vh;
     display: flex;
-    justify-content: start;
+    flex-flow: row nowrap;
     align-items: center;
-    flex-wrap:wrap;
-    height: 36px;
-    background-color: rgba(26, 80, 139, 0.75);
-    padding: 0 10px 4px 10px
-    
-}
-
-.main-header i{
-    padding-top: 5px;
-}
-
-.main-header .user-icons{
-   
-    align-items:center;
+    justify-content: space-around;
+    background-color: var(--color-azulOscuro);
+  }
+  .logo__link {
+    font-size: var(--title);
     color: var(--color-beige);
-    order: 2;
-}
-
-.main-header .burger-icon {
-    border-radius: 5px;
+    font-family: var(--font-berkshire);
+    letter-spacing: 0.1rem;
+  }
+  .btn {
+    width: 100px;
+    text-align: end;
+    font-size: var(--icon);
     color: var(--color-beige);
-    font-size: 24px;
-    order: 0;
-    padding: 2px 5px 0 5px;
-}
-
-.main-header .logo {
-    margin-right: auto;
-    height: 36px;
-    width: 222px;
-    order: 1;
-}
-
-.main-header .logo img {
-    width: 50%;
-}
-
+    cursor: pointer;
+  }
+  .nav {
+    position: absolute;
+    top: 10vh;
+    right: 0;
+    background:var(--color-beige);
+    height: 90vh;
+    width: 100%;
+    flex-direction: column;
+    clip-path: circle(0px at 100% -10%);
+    -webkit-clip-path: circle(0px at 100% -10%);
+    transition: all 2s ease-out;
+  }
+  .nav.open {
+    clip-path: circle(1000px at 90% -10%);
+    -webkit-clip-path: circle(1000px at 90% -10%);
+    pointer-events: all;
+  }
+  .menu {
+    height: 80vh;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .menu__items{
+    height: 40px;
+  }
+  .menu__link{
+      font-size: var(--paragraph);
+      color: var(--color-azulOscuro);
+      letter-spacing: 0.5px;
+      cursor: pointer;
+  }
+  .menu__link:hover{
+    text-decoration: underline;
+  }
+  .login{
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+  }
+  .login__btn{
+      border: none;
+      font-size: var(--btn);
+      letter-spacing: 0.1rem;
+      color: var(--color-azulOscuro);
+      cursor: pointer;
+  }
+  .login__btn:hover{
+    text-decoration: underline;
+  }
