--- a/views/index.html
+++ b/views/index.html
@@ -19,21 +19,43 @@
 </head>
 <body>
   <!-- HEADER -->
-  <header class="main-header">
+  <header class="header">
     <div class="logo">
-      <img src="/images/Diseño y Logo/Logo rectangular/Letras Claras/Claro-Rectangular-400px.png" alt="">
-    </div> 
-    <div class ="burger-icon">
-    <i class="fas fa-bars"></i>
-  </div>
-      <div class="user-icons">
-        <i class="fas fa-search"></i>
-          <i class="fas fa-shopping-cart"></i>
-      </div>  
-
-</header>
+      <h1 class="logo__title"><a href="" class="logo__link">SpellBook</a></h1>
+    </div>
+    <div class="btn">
+      <i class="fas fa-bars" id="icon"></i>
+    </div>
+    <nav class="nav">
+      <ul class="menu">
+        <li class="menu__items"><a href="#" class="menu__link">Inicio</a></li>
+        <li class="menu__items"><a href="#" class="menu__link">Libros</a></li>
+        <li class="menu__items">
+          <a href="#" class="menu__link">Recomendados</a>
+        </li>
+        <li class="menu__items">
+          <a href="#" class="menu__link">Novedades</a>
+        </li>
+        <li class="menu__items">
+          <a href="#" class="menu__link">Nosotros</a>
+        </li>
+      </ul>
+      <div class="login">
+        <a class="login__btn">Registrate</a>
+        <a class="login__btn login--up">Iniciar sesion</a>
+      </div>
+    </nav>
+  </header>
+  <script src="js/header.js"></script>
 
     <!-- CARROUSEL -->
+    <div class="carrousel">
+      <img src="/images/Libros/fuegoSangre.png" alt="" class="carrousel-book">
+      <img src="/images/Libros/ElLegadoMaldito.jpg" alt="" class="carrousel-book">
+      <img src="/images/Libros/laEspadaDelDestino.jpg" alt="" class="carrousel-book">
+      <img src="/images/Libros/El_talismán.jpg" alt="" class="carrousel-book">
+      <img src="/images/Libros/losCrimenesDeGrindelwald.jpg" alt="" class="carrousel-book">
+    </div>
 
     <main>
     <!-- AUTORES DESTACADOS -->
@@ -47,7 +69,8 @@
       <!-- TOLKIEN -->
       <article class="card">
         <div class="card-content">
-          <img class="writer" src="/images/Autores/tolkien.png" alt="Imagen de J. R. R. Tolkien">
+          <img class="writer-tolkien" src="/images/Autores/tolkien.png" alt="Imagen de J. R. R. Tolkien">
+          <h4 class="writer-name">J. R. R. Tolkien</h4>
           <div class="card-text">
           <img class="bio" src="/images/Recursos/gondortree.png" alt="árbol blanco">
           <p class="bio-text">Escritor, poeta, filólogo, lingüista y profesor universitario británico, conocido principalmente por ser el autor de las novelas clásicas de fantasía heroica El hobbit, El Silmarillion y El Señor de los Anillos. </p>
@@ -57,7 +80,8 @@
       <!-- ANDRZEJ SAPKOWSKI -->
       <article class="card">
         <div class="card-content">
-          <img class="writer" src="/images/Autores/sapkowsky.png" alt="Imágen de Andrzej Sapkowski">
+          <img class="writer-sapkowski" src="/images/Autores/sapkowsky.png" alt="Imágen de Andrzej Sapkowski">
+          <h4 class="writer-name">Andrzej Sapkowski</h4>
           <div class="card-text">
           <img class="bio" src="/images/Recursos/thewitcher.png" alt="Logo the witcher">
           <p class="bio-text">Escritor polaco de fantasía heroica. Sus obras están fuertemente influenciadas por la cultura y mitología eslavas, así como por las narraciones tradicionales. Su estilo de escritura es fluido y directo adaptando el lenguaje popular de la Polonia actual. Entre sus obras más populares se encuentra la saga del brujo Geralt de Rivia, compuesta por siete volúmenes.</p>
@@ -67,7 +91,8 @@
       <!-- GEORGE R. R. MARTIN -->
       <article class="card">
         <div class="card-content">
-          <img class="writer" src="/images/Autores/martin.png" alt="Imagen de George R. R. Martin">
+          <img class="writer-martin" src="/images/Autores/martin.png" alt="Imagen de George R. R. Martin">
+          <h4 class="writer-name">George R. R. Martin</h4>
           <div class="card-text">
           <img class="bio" src="/images/Recursos/targaryen.png" alt="Logo Casa Targaryen">
           <p class="bio-text">Guionista y escritor estadounidense de literatura fantástica, ciencia ficción y terror. Es conocido por ser el autor de la serie de novelas Canción de hielo y fuego, adaptadas para la televisión con el título de Juego de tronos (Game of Thrones). </p>
@@ -79,8 +104,8 @@
     <!-- SELECCIÓN DEL MES -->
     <div class="headline">
       <img class="varita"src="/images/Recursos/varita.png" alt=" imágen de varita mágica">
+      <h1>La selección del mes</h1>
       </div>
-      <h1>Seleccionados del mes</h1>
     <section class="month-selection">
       <!-- LIBRO 1 -->
       <article class="book">
@@ -117,8 +142,10 @@
     </section>
      <!-- MÁS TÍTULOS -->
      <section class="titles">
-       <img src="/images/Recursos/varita.png" alt="varita mágica">
-       <a href="ACÁ VA EL LINK A UNA VISTA CON UN LISTADO DE TÍTULOS"><h3>Más títulos</h3></a>
+      <div class="more-titles">
+        <img class="varita"src="/images/Recursos/varita.png" alt=" imágen de varita mágica">
+        <h1>Más títulos</h1>
+        </div>
      </section>
     </main>
     <!-- FOOTER -->
