--- a/views/index.html
+++ b/views/index.html
@@ -19,36 +19,8 @@
 </head>
 <body>
   <!-- HEADER -->
-  <header class="header">
-    <div class="logo">
-      <h1 class="logo__title"><a href="" class="logo__link">SpellBook</a></h1>
-    </div>
-    <div class="btn">
-      <i class="fas fa-bars" id="icon"></i>
-    </div>
-    <nav class="nav">
-      <ul class="menu">
-        <li class="menu__items"><a href="#" class="menu__link">Inicio</a></li>
-        <li class="menu__items"><a href="#" class="menu__link">Libros</a></li>
-        <li class="menu__items">
-          <a href="#" class="menu__link">Recomendados</a>
-        </li>
-        <li class="menu__items">
-          <a href="#" class="menu__link">Novedades</a>
-        </li>
-        <li class="menu__items">
-          <a href="#" class="menu__link">Nosotros</a>
-        </li>
-      </ul>
-      <div class="login">
-        <a class="login__btn">Registrate</a>
-        <a class="login__btn login--up">Iniciar sesion</a>
-      </div>
-    </nav>
-  </header>
-  <script src="js/header.js"></script>
-
-    <!-- CARROUSEL -->
+<main>
+      <!-- CARROUSEL -->
     <div class="carrousel">
       <img src="/images/Libros/fuegoSangre.png" alt="" class="carrousel-book">
       <img src="/images/Libros/ElLegadoMaldito.jpg" alt="" class="carrousel-book">
@@ -56,8 +28,6 @@
       <img src="/images/Libros/El_talismán.jpg" alt="" class="carrousel-book">
       <img src="/images/Libros/losCrimenesDeGrindelwald.jpg" alt="" class="carrousel-book">
     </div>
-
-    <main>
     <!-- AUTORES DESTACADOS -->
       <!-- ENCABEZADO -->
     <div class="headline">
@@ -84,7 +54,7 @@
           <h4 class="writer-name">Andrzej Sapkowski</h4>
           <div class="card-text">
           <img class="bio" src="/images/Recursos/thewitcher.png" alt="Logo the witcher">
-          <p class="bio-text">Escritor polaco de fantasía heroica. Sus obras están fuertemente influenciadas por la cultura y mitología eslavas, así como por las narraciones tradicionales. Su estilo de escritura es fluido y directo adaptando el lenguaje popular de la Polonia actual. Entre sus obras más populares se encuentra la saga del brujo Geralt de Rivia, compuesta por siete volúmenes.</p>
+          <p class="bio-text">Escritor polaco de fantasía heroica. Sus obras están fuertemente influenciadas por la cultura y mitología eslavas, así como por las narraciones tradicionales. Entre sus obras más populares se encuentra la saga del brujo Geralt de Rivia, compuesta por siete volúmenes.</p>
           </div>
         </div>
       </article>
@@ -111,20 +81,20 @@
       <article class="book">
         <div class="book-content">
           <img class="book-cover" src="/images/Libros/el temor de un hombre sabio.jpg" alt="Portada de 'El temor de un hombre sabio'">
-          <h5>El Temor de un Hombre Sabio</h5>
-          <h6>Patrick Rothfus</h6>
+          <h3>El Temor de un Hombre Sabio</h3>
+          <h5>Patrick Rothfus</h5>
           <!-- Botón de comprar -->
-          <input type="button" value="Comprar">
+          <div class="shopping-btn"><input type="button" value="Comprar"></div>
         </div>
       </article>
       <!-- LIBRO 2 -->
       <article class="book">
         <div class="book-content">
           <img class="book-cover" src="/images/Libros/la morada - el exilio - el refugio.jpg" alt="Portada de 'La Morada - El exilio - El Refugio'">
-          <h5>La Morada - El Exilio - El Refugio</h5>
-          <h6>R. A. Salvatore</h6>
+          <h3>La Morada - El Exilio - El Refugio</h3>
+          <h5>R. A. Salvatore</h5>
           <!-- Botón de comprar -->
-          <input type="button" value="Comprar">
+          <div class="shopping-btn"><input type="button" value="Comprar"></div>
           
         </div>
       </article>
@@ -132,10 +102,10 @@
       <article class="book">
         <div class="book-content">
           <img class="book-cover" src="/images/Libros/corona de espadas.jpg" alt="Portada de 'Corona de Espadas'">
-          <h5>Corona de Espadas</h5>
-          <h6>Robert Jordan</h6>
+          <h3>Corona de Espadas</h3>
+          <h5>Robert Jordan</h5>
           <!-- Botón de comprar -->
-          <input type="button" value="Comprar">
+          <div class="shopping-btn"><input type="button" value="Comprar"></div>
           
         </div>
       </article>
