--- a/views/index.html
+++ b/views/index.html
@@ -28,6 +28,44 @@
       <img src="/images/Libros/El_talismán.jpg" alt="" class="carrousel-book">
       <img src="/images/Libros/losCrimenesDeGrindelwald.jpg" alt="" class="carrousel-book">
     </div>
+
+    <!-- SLIDER PARA DESKTOP -->
+    <div class="slider">
+      <input type="radio" name="testimonial" id="t-1">
+      <input type="radio" name="testimonial" id="t-2">
+      <input type="radio" name="testimonial" id="t-3" checked>
+      <input type="radio" name="testimonial" id="t-4">
+      <input type="radio" name="testimonial" id="t-5">
+      <div class="testimonials">
+        <label class="item" for="t-1">
+          <img src="/images/Libros/ElLegadoMaldito.jpg" alt="picture">
+        </label>
+        <label class="item" for="t-2">
+          <img src="/images/Libros/losCrimenesDeGrindelwald.jpg" alt="picture">
+  
+        </label>
+        <label class="item" for="t-3">
+          <img src="/images/Libros/corona de espadas.jpg" alt="picture">
+        
+        </label>
+        <label class="item" for="t-4">
+          <img src="/images/Libros/laEspadaDelDestino.jpg" alt="picture">
+          
+        </label>
+        <label class="item" for="t-5">
+          <img src="/images/Libros/El_talismán.jpg" alt="picture">
+        </label>
+      </div>
+      <div class="dots">
+        <label for="t-1"></label>
+        <label for="t-2"></label>
+        <label for="t-3"></label>
+        <label for="t-4"></label>
+        <label for="t-5"></label>
+      </div>
+    </div>
+
+
     <!-- AUTORES DESTACADOS -->
       <!-- ENCABEZADO -->
     <div class="headline">
