--- a/views/index.html
+++ b/views/index.html
@@ -48,12 +48,11 @@
           </li>
         </ul>
         <div class="login">
-          <a class="login__btn">Registrate</a>
-          <a class="login__btn login--up">Iniciar sesion</a>
+          <a class="login__btn" id="sign_up" href="/signup">Registrate</a>
+          <a class="login__btn" id="log_in" href="/login">Iniciar sesion</a>
         </div>
       </nav>
     </header>
-    <h1>Home</h1>
     <script src="js/header.js"></script>
   </body>
 </html>
