--- a/views/signUp.html
+++ b/views/signUp.html
@@ -4,10 +4,106 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheets/signUp.css">
+    <link rel="stylesheet" href="stylesheets/login.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Registro</h1>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Berkshire Swash -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap"
+      rel="stylesheet"
+    />
+    <!-- fon icons -->
+    <script
+      src="https://kit.fontawesome.com/fc00004fb4.js"
+      crossorigin="anonymous"
+    ></script>
+</head>
+<body>
+    <header class="header">
+        <div class="logo">
+          <h1 class="logo__title"><a href="" class="logo__link">SpellBook</a></h1>
+        </div>
+        <div class="btn">
+          <i class="fas fa-bars" id="icon"></i>
+        </div>
+        <nav class="nav">
+          <ul class="menu">
+            <li class="menu__items"><a href="#" class="menu__link">Inicio</a></li>
+            <li class="menu__items"><a href="#" class="menu__link">Libros</a></li>
+            <li class="menu__items">
+              <a href="#" class="menu__link">Recomendados</a>
+            </li>
+            <li class="menu__items">
+              <a href="#" class="menu__link">Novedades</a>
+            </li>
+            <li class="menu__items">
+              <a href="#" class="menu__link">Nosotros</a>
+            </li>
+          </ul>
+          <div class="login">
+            <a class="login__btn" href="/signup" >Registrate</a>
+            <a class="login__btn" href="/login">Iniciar sesion</a>
+          </div>
+        </nav>
+      </header>
+    <aside class="aside">
+        <div class="close" id="close">
+          <i class="fas fa-times icon__close"></i>
+        </div>
+        <figure class="logo-sticker">
+          <img src="images/Diseño y Logo/Logo para fondos oscuros.png" alt="" class="logo-sticker__img">
+        </figure>
+        <form action="" method="POST" class="form">
+          <div class="box">
+            <h2 class="box__title">Registrate</h2>
+          </div>
+  
+          <div class="user">
+            <input type="text" name="name" placeholder="Nombre de Usuario" class="user__info" />
+            <span class="warning">Nombre de usuario incorrecto</span>
+          </div>
+  
+          <div class="user">
+            <input type="email" name="email" placeholder="Correo Electronico" class="user__info" />
+            <span></span>
+          </div>
+  
+          <div class="user">
+            <input type="password" name="password" placeholder="Contraseña" class="user__info" />
+            <span class="warning">Contraseña incorrecta</span>
+          </div>
+  
+          <div class="user">
+            <input
+              type="password"
+              name="c_pass"
+              placeholder="Comfimar contraseña" class="user__info"
+            />
+            <span class="warning">La contraseña no coinciden</span>
+          </div>
+  
+          <button type="submit" value="Enviar" class="btn__send">Registrate</button>
+          <div class="terminos">
+            <input type="checkbox"/> 
+  
+            <label for="" >Acepto los terminos  <a href="">Terminos y condiciones </a></label>
+          </div>
+          <div class="user social">
+            <a href="" class="social__btn"><i class="fab fa-google social__icon"></i>GOOGLE</a>
+            <a href="" class="social__btn"><i class="fab fa-facebook-f social__icon"></i>FACEBOOK</a>
+          </div>
+        
+          <div class="user">
+            <a href="/login" class="enlace_link">¿Ya tengo una cuenta?</a>
+          </div>
+        </form>
+      </aside>
+      <script src="js/header.js"></script>
 </body>
 </html>
