--- a/views/index.html
+++ b/views/index.html
@@ -157,7 +157,56 @@
      </section>
     </main>
     <!-- FOOTER -->
+        <footer>
+          <div class="footer-main">
+          <section class="footer-myAccount">
+            <div class="footer-header">
+              <p>Mi Cuenta</p>
+            </div>
+            <div class="footer-options">
+              <p>Ingresar</p>
+              <p>Ver Carrito</p>
+              <p>Finalizar Compra</p>
+            </div>
+            
+          </section>
+
+          <section class="footer-contactUs">
+            <div class="footer-header">
+              <p>Contacto</p>
+            </div>
+            <div class="footer-options">
+              <p><i class="fas fa-envelope"></i>  <a href="mailto:info@spellbook.com">mailto:info@spellbook.com</a></p>
+              <p><i class="fas fa-phone"></i>  11 2254 4666</p>
+              <p><i class="fab fa-facebook"></i> <i class="fab fa-instagram"></i> <i class="fab fa-twitter"></i></p>
+            </div>
+          </section>
+
+          <section class="footer-onlineStore">
+            <div class="footer-header">
+              <p>Online Store</p>
+            </div>
+            <div class="footer-options">
+              <p>Medios de pago</p>
+              <p>Envíos</p>
+              <p>Términos y Condiciones</p>
+            </div>
+            
+          </section>
+        </div>
+
+          <section class="footer-logo">
+           <p>SpellBook</p>
+
+          </section>
         
+          
+          <div class="footer-copyright">
+            <hr>
+            <p>SPELLBOOK © 2021 MARCA REGISTRADA - TODOS LOS DERECHOS RESERVADOS - </p>
+          </div>
+          
+        </footer>
 
        
   </body>
