footer responsive terminado

--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
     <!-- NORMALIZE Y ESTILOS -->
     <link rel="stylesheet" href="/stylesheets/normalize.css">
     <link rel="stylesheet" href="/stylesheets/styles.css">
-    <title>Document</title>
+    <title>SpellBook</title>
 </head>
 <body>
   <!-- HEADER -->
